test: restore compatible source reader